# measure-uq

./: .commitlintrc.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  JUPYTER_SETUP.md  MATPLOTLIB_SETUP.md  NOTICE.txt  README.md  pyproject.toml  run_notebook.py  run_notebook.sh  test_matplotlib.py  test_tkinter.py
.github/: CODEOWNERS
docs/: Makefile
docs/source/: conf.py  index.rst
examples/: __init__.py
examples/equations/bistable_ode/: ode.py  plot.ipynb  run_pinn.py  run_pinn_pce.py
examples/equations/cable_pde/: __init__.py  pde.py  plot.ipynb  run_pinn.py
examples/equations/diffusion_1d/: plot.ipynb  plot_for_paper.ipynb  run_pce.py  run_pinn.py  run_pinn_pce.py
examples/equations/heat_1d/: pde.py  plot.ipynb  plot.py  plot_for_paper.ipynb  run_pce.py  run_pinn.py  run_pinn_pce.py
examples/equations/membrane_ode/: __init__.py  ode.py  plot.ipynb  run_pinn.py
examples/equations/reaction_diffusion_1d/: pde.py  plot.ipynb  plot_for_paper.ipynb  run_pinn.py  run_pinn_pce.py
examples/equations/schrodinger_1d/: __init__.py  pde.py  plot.ipynb  run_pinn.py
examples/equations/wave_1d/: __init__.py  pde.py  plot.ipynb  plot.py  plot_residuals.py  run_pce.py  run_pinn.py  run_pinn_pce.py
examples/pce/: __init__.py
examples/pce/ex_00/: __init__.py  pce_example_00_a.py  pce_example_00_b.py
examples/pce/ex_01/: __init__.py  pce_example_01.py
examples/pinn/: __init__.py
examples/pinn/ex-01/: pinn-example-01-a.py  pinn-example-01-b.py
examples/pinn/ex-02/: pinn-example-02-a.py  pinn-example-02-b.py
examples/pinn/ex-03/: pinn-example-03-a.py  pinn-example-03-b.py  pinn-example-03-c.py
examples/pinn/ex_01/: Readme.md  __init__.py  pde.py  pinn_example_01_a.py  pinn_example_01_b.py
examples/pinn/ex_02/: Readme.md  __init__.py  pde.py  pinn_example_02.py
examples/pinn/ex_03/: __init__.py  pde.py  pinn_example_03.py
examples/pinn/ex_04/: Readme.md  __init__.py  pde.py  pinn_example_04_a.py  pinn_example_04_b.py  pinn_example_04_c.py  plot.py
examples/pinn_pce/: __init__.py
examples/pinn_pce/ex_01/: __init__.py  pce.py  pde.py  pinn_example_01.py  pinn_pce_example_01.py  plot.py
examples/pinn_pce/ex_01/data/: pce.npz
examples/pinn_pce/ex_02/: __init__.py  pce.py  pde.py  pinn_example_02.py  pinn_pce_example_02.py  plot.py
examples/systems/: __init__.py
examples/systems/lotka_volterra/: ode.py  run_pinn.py
examples/systems/simple/: __init__.py  ode.py  run_pinn.py
measure_uq/: __init__.py  activations.py  callbacks.py  models.py  networks.py  pde.py  plots.py  stoppers.py  trainer.py  typing.py  utilities.py
measure_uq/gradients/: __init__.py  gradients.py  gradients_reverse.py  jacobian.py
measure_uq/trainers/: __init__.py  trainer.py  trainer_data.py  utilities.py
sandbox/: bistable_ode_simulation.ipynb  heat.py  heat_equation.py  pce-example-01.py  pinn-example-01-a.py  pinn-example-01-b.py  pinn-example-01.py  pinn-example-02-a.py  pinn-example-02-b.py  pinn-example-02.py  pinn-example-03.py  random_autocatalysis_pde.ipynb  test_dynamic_array.py  test_gpu.py  test_gradients.py  test_monomials.py  test_sparse_dynamic.py  wave.py
tests/: models.py  utilities.py
