[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[project]
authors = [
  {name = "G. Arampatzis", email = "georgios.arampatzis@uoc.gr"}
]
description = ""
name = "measure-uq"
packages = [
  {include = "measure_uq"},
  {include = "examples"}
]
readme = "README.md"
version = "0.1.0"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = "sandbox(/|\\|$)"
python_version = "3.11"

[[tool.mypy.overrides]]
disable_error_code = ["name-defined"]
ignore_missing_imports = true
module = [
  "chaospy",
  "scipy.integrate",
  "numpoly",
  "sympy",
  "sympy.plotting",
  "torchvision"
]

[tool.poetry.dependencies]
chaospy = "^4.3.17"
clearml = "^1.16.4"
matplotlib = "^3.9.2"
numpoly = "1.2.14"
numpy = "^2.2.4"
pytest = "^8.3.4"
python = "^3.11"
python-box = "^7.2.0"
sympy = "1.13.1"
torch = "^2.6.0"
torchvision = "^0.21.0"
wandb = "^0.18.3"

[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
mypy = "^1.11.2"
pre-commit = "^4.0.0"
pretty-errors = "^1.2.25"
pydocstyle = "^6.3.0"
ruff = "^0.11.4"

[tool.poetry.group.doc.dependencies]
numpydoc = "^1.8.0"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"

[tool.ruff]
exclude = ["sandbox"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = [
  # pylint
  "PLR0913",
  "PLR0915",
  "PLR2004",
  # ruff
  "RUF001",
  "RUF015",
  # flake8-bandit
  "S101",
  "S102",
  "S602",
  "S603",
  "S604",
  # mccabe
  "C90",
  # flake8-anootations
  "ANN",
  # flake8-commas
  "COM819",
  #
  "NPY002",
  "B027",
  "PD901",
  "PD011",
  "PERF203",
  "A002",
  "A003",
  "PTH",
  "FBT",
  "DTZ",
  "EM",
  "FA100",
  "T201",
  "TRY003",
  "ISC001",
  "N806",
  "SLF001"
]
select = ["ALL"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
